[package]
name = "web1337"
version = "0.1.0"
edition = "2021"
description = "The Web1337 library to use with KLYNTAR"

keywords = ["klyntar","web3", "web1337"]

readme="README.md"

license = "Apache-2.0"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



##exclude = ["target/debug"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html